kuber/gitops/appium/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: appium
  labels:
    name: appium
