kuber/gitops/appium/appium-grid-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appium-grid-event-bus
  labels:
    app.kubernetes.io/name: appium-grid-event-bus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: appium-grid-event-bus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: appium-grid-event-bus
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: devicehub.role
                    operator: In
                    values:
                      - storage
      containers:
        - name: event-bus
          image: selenium/event-bus:4.39.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: publish
              containerPort: 4442
            - name: subscribe
              containerPort: 4443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appium-grid-sessions
  labels:
    app.kubernetes.io/name: appium-grid-sessions
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: appium-grid-sessions
  template:
    metadata:
      labels:
        app.kubernetes.io/name: appium-grid-sessions
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: devicehub.role
                    operator: In
                    values:
                      - storage
      containers:
        - name: sessions
          image: selenium/sessions:4.39.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5556
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appium-grid-session-queue
  labels:
    app.kubernetes.io/name: appium-grid-session-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: appium-grid-session-queue
  template:
    metadata:
      labels:
        app.kubernetes.io/name: appium-grid-session-queue
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: devicehub.role
                    operator: In
                    values:
                      - storage
      containers:
        - name: session-queue
          image: selenium/session-queue:4.39.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5559
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appium-grid-distributor
  labels:
    app.kubernetes.io/name: appium-grid-distributor
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: appium-grid-distributor
  template:
    metadata:
      labels:
        app.kubernetes.io/name: appium-grid-distributor
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: devicehub.role
                    operator: In
                    values:
                      - storage
      containers:
        - name: distributor
          image: selenium/distributor:4.39.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5553
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appium-grid-router
  labels:
    app.kubernetes.io/name: appium-grid-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: appium-grid-router
  template:
    metadata:
      labels:
        app.kubernetes.io/name: appium-grid-router
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: devicehub.role
                    operator: In
                    values:
                      - storage
      containers:
        - name: router
          image: selenium/router:4.39.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4444
