kuber/gitops/appium/appium-grid-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: appium-grid-event-bus
  labels:
    app.kubernetes.io/name: appium-grid-event-bus
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: appium-grid-event-bus
  ports:
    - name: publish
      port: 4442
      targetPort: 4442
      protocol: TCP
    - name: subscribe
      port: 4443
      targetPort: 4443
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: appium-grid-sessions
  labels:
    app.kubernetes.io/name: appium-grid-sessions
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: appium-grid-sessions
  ports:
    - name: http
      port: 5556
      targetPort: 5556
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: appium-grid-session-queue
  labels:
    app.kubernetes.io/name: appium-grid-session-queue
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: appium-grid-session-queue
  ports:
    - name: http
      port: 5559
      targetPort: 5559
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: appium-grid-distributor
  labels:
    app.kubernetes.io/name: appium-grid-distributor
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: appium-grid-distributor
  ports:
    - name: http
      port: 5553
      targetPort: 5553
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: appium-grid-router
  labels:
    app.kubernetes.io/name: appium-grid-router
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: appium-grid-router
  ports:
    - name: http
      port: 4444
      targetPort: 4444
      protocol: TCP
